--- a/renovate.json
+++ b/renovate.json
@@ -1,1 +1,9 @@
-{}
+{
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": [
+    "config:base",
+    "workarounds:javaLTSVersions",
+    ":combinePatchMinorReleases",
+    ":separateMajorReleases"
+  ]
+}
