--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,20 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:base",
+    "mergeConfidence:all-badges",
+    "config:recommended",
     "workarounds:javaLTSVersions",
     ":combinePatchMinorReleases",
     ":separateMajorReleases"
-  ]
+  ],
+  "packageRules": [
+    {
+      "matchDatasources": [
+        "docker"
+      ],
+      "matchPackageNames": [
+        "**/eclipse-temurin"
+      ],
+      "versioning": "regex:^(?<major>\\d+)?(\\.(?<minor>\\d+))?(\\.(?<patch>\\d+))?([\\._+](?<build>(\\d\\.?)+)(LTS)?)?(-(?<compatibility>.*))?$"
+    },
 }
