--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,7 @@
     "config:recommended",
     "workarounds:javaLTSVersions",
     ":combinePatchMinorReleases",
-    ":separateMajorReleases"
+    ":separateMultipleMajorReleases"
   ],
   "packageRules": [
     {
